apps/qbittorrent/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: qbittorrent
      app.kubernetes.io/name: qbittorrent
  serviceName: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: qbittorrent
        app.kubernetes.io/name: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: qbittorrent
          resources:
            requests:
              memory: 7Gi
              cpu: 126m
          livenessProbe:
            initialDelaySeconds: 60
            tcpSocket:
              port: http
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 8080
            - name: bittorrent
              containerPort: 6881
              protocol: TCP
            - name: bittorrent-udp
              containerPort: 6881
              protocol: UDP
          readinessProbe:
            initialDelaySeconds: 30
            tcpSocket:
              port: http
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 180
            initialDelaySeconds: 10
            tcpSocket:
              port: http
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
          securityContext:
            capabilities:
              add:
                - CHOWN
                - FOWNER
                - SETUID
                - SETGID
      securityContext:
        fsGroup: 1000
      volumes:
        - name: rclone-config
          configMap:
            name: qbittorrent-rclone
        - name: startup-config
          secret:
            secretName: qbittorrent
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
