apps/qbittorrent/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-tracker
spec:
  selector:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
  ports:
    - name: bittorrent
      port: 6881
      targetPort: bittorrent
    - name: bittorrent-udp
      port: 6881
      protocol: UDP
      targetPort: bittorrent-udp
